# dgx_spark_code

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml
.claude/: settings.local.json
aiagent-mission-ctrl/: CLAUDE.md  README.md  SPEC.md  docker-compose.yml  gx10-mcp.service  kanban.yml  pyproject.toml  server.py
aiagent-mission-ctrl/hooks/: activity_guard.py  check_board.py  session_start.py  stop_guard.py
aiagent-mission-ctrl/lib/: config.py  context_store.py  docker.py  kanban_store.py  nvidia.py  systemd.py
aiagent-mission-ctrl/routers/: context.py  coordination.py  environment.py  history.py  kanban.py  live.py  recording.py
aiagent-mission-ctrl/tests/: conftest.py  test_context.py  test_coordination.py  test_environment.py  test_health.py  test_history.py  test_kanban.py  test_live.py  test_recording.py
aiagent-mission-ctrl/tools/: coordination.py  history.py  recording.py
aiagent-mission-ctrl/ws/: manager.py
app/: main.py
claude-sdlc-skills/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  README.md
env-docs/: README.md  hardware.md  network.md  policies.md  services.md
gx10-mcp/: .gitignore  (+7 more)
local-agent/backend/: Dockerfile  pyproject.toml
local-agent/backend/app/: config.py  main.py
local-agent/backend/app/agents/: react.py  schemas.py
local-agent/backend/app/api/: routes.py
local-agent/backend/app/llm/: client.py
local-agent/backend/app/memory/: conversation.py
local-agent/backend/app/tools/: __init__.py  file_ops.py  rag.py  registry.py  shell.py  web_fetch.py  web_search.py
(+94 files in other folders)
