[project]
name = "gx10-mcp"
version = "0.1.0"
description = "GX10 MCP Server — infrastructure management for ASUS Ascent GX10"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1",
    "redis>=5.0",
    "pyyaml>=6.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.42.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
