[project]
name = "local-agent"
version = "0.1.0"
description = "Local Agentic AI System with ReAct pattern"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "chromadb>=0.5.0",
    "duckduckgo-search>=7.0.0",
    "trafilatura>=2.0.0",
    "html2text>=2024.2.26",
    "docker>=7.1.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
